@@ -97,6 +97,7 @@ timeFormat: 'hh:mm:ss',
 plugs_infoJS = <?php echo json_encode($plugs_infos) ?>;
 highchart_plug=<?php echo $selected_plug; ?>;
 resume_plugs=<?php echo json_encode($resume) ?>;
+resume_regul=<?php echo json_encode($resume_regul) ?>;
 start=<?php echo json_encode($start) ?>;
 end=<?php echo json_encode($end) ?>;
 rep=<?php echo json_encode($rep) ?>;
@@ -367,8 +368,11 @@ $(document).ready(function() {
 
         if(plugs_infoJS[$('#selected_plug').val()-1]['PLUG_REGUL']=="False") {
             $("#second_regul_plug").text("<?php echo __('SECOND_REGUL_OFF','highchart'); ?>");
+            $("#second_regul_info").css("display", "none");
         } else {
             $("#second_regul_plug").text("<?php echo __('SECOND_REGUL_ON','highchart'); ?>");
+            $("#second_regul_img").attr("title", resume_regul[$('#selected_plug').val()-1]);
+            $("#second_regul_info").css("display", "");
         }
 
         $("#resume_img").prop('title', resume_plugs[$('#selected_plug').val()]);
@@ -480,7 +484,7 @@ $(document).ready(function() {
 <tr>
     <td></td>
     <td><?php echo __('VALUE_REGUL_SECOND'); ?>:</td>
-    <td><label class="readonly" id="second_regul_plug"><?php if(strcmp($plugs_infos[$selected_plug-1]['PLUG_REGUL'],"False")==0) { echo __('SECOND_REGUL_OFF'); } else { echo __('SECOND_REGUL_ON'); } ?></label></td>
+    <td><label class="readonly" id="second_regul_plug"><?php if(strcmp($plugs_infos[$selected_plug-1]['PLUG_REGUL'],"False")==0) { echo __('SECOND_REGUL_OFF'); } else { echo __('SECOND_REGUL_ON'); ?></label><label id="second_regul_info" style=<?php if(strcmp($plugs_infos[$selected_plug-1]['PLUG_REGUL'],"False")==0) { echo "display:none"; } else { echo ""; } ?>><img id="second_regul_img" src="main/libs/img/infos.png" alt="" title="<?php echo $resume_regul[$selected_plug-1]; ?>" /><?php } ?></label></td>
     <td></td>
 </tr>
 <?php } ?>
